[project]
name = "markitdown"
version = "0.1.0"
description = ""
authors = [
    {name = "alwaysmavs",email = "beingswu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "markitdown[all]>=0.14.0",
    "openai>=1.0.0"
]

[tool.poetry]
package-mode = false
packages = [{include = "markitdown", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
